--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,7 @@
         }
     },
     "require-dev": {
-        "drupal/core-dev": "^9.3"
+        "drupal/core-dev": "^9.3",
+        "phpspec/prophecy-phpunit": "^2"
     }
 }
