--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,9 @@
     ],
     "require": {
         "composer/installers": "^1.9",
-        "drupal/core-composer-scaffold": "^9.3",
-        "drupal/core-project-message": "^9.3",
-        "drupal/core-recommended": "^9.3",
-        "drupal/examples": "^3.0",
+        "drupal/core-composer-scaffold": "^10",
+        "drupal/core-project-message": "^10",
+        "drupal/core-recommended": "^10",
         "drush/drush": "^11.0"
     },
     "conflict": {
@@ -33,7 +32,8 @@
             "composer/installers": true,
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
-            "dealerdirect/phpcodesniffer-composer-installer": true
+            "dealerdirect/phpcodesniffer-composer-installer": true,
+            "phpstan/extension-installer": true
         }
     },
     "extra": {
@@ -94,7 +94,7 @@
         }
     },
     "require-dev": {
-        "drupal/core-dev": "^9.3",
+        "drupal/core-dev": "^10",
         "phpspec/prophecy-phpunit": "^2"
     }
 }
