--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "drupal/core-composer-scaffold": "^10",
         "drupal/core-project-message": "^10",
         "drupal/core-recommended": "^10",
+        "drupal/examples": "^4.0",
         "drush/drush": "^11.0"
     },
     "conflict": {
