fix: update Nginx path, remove Caddyfile

--- a/tools/docker/images/web/root/etc/nginx/conf.d/default.conf
+++ b/tools/docker/images/web/root/etc/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
   server_name _;
 
-  root /app/docroot;
+  root /app/web;
 
   location / {
     try_files $uri /index.php?$query_string;
