build: update configuration files

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,31 +1,2 @@
-/.editorconfig
-/.gitattributes
-/vendor/
-/web/.csslintrc
-/web/.eslintignore
-/web/.eslintrc.json
-/web/.ht.router.php
-/web/.htaccess
-/web/INSTALL.txt
-/web/README.md
-/web/autoload.php
-/web/core/
-/web/example.gitignore
-/web/index.php
-/web/modules/README.txt
-/web/profiles/README.txt
-/web/robots.txt
-/web/sites/*/files/
-/web/sites/*/private/
-/web/sites/*/services*.yml
-/web/sites/*/settings*.php
-/web/sites/README.txt
-/web/sites/default/default.services.yml
-/web/sites/default/default.settings.php
-/web/sites/development.services.yml
-/web/sites/example.settings.local.php
-/web/sites/example.sites.php
-/web/sites/simpletest/
-/web/themes/README.txt
-/web/update.php
-/web/web.config
+/.github
+/README.md
