build(docker): opt in to new database credentials

--- a/build.yaml
+++ b/build.yaml
@@ -52,3 +52,6 @@ dockerfile:
         - phpcs -vv
         - phpstan
         - phpunit --testdox
+
+experimental:
+  useNewDatabaseCredentials: true
