build: update configuration files

--- a/build.yaml
+++ b/build.yaml
@@ -54,4 +54,5 @@ dockerfile:
         - phpunit --testdox
 
 experimental:
+  createGitHubActionsConfiguration: true
   useNewDatabaseCredentials: true
