--- a/build.yaml
+++ b/build.yaml
@@ -15,6 +15,8 @@ php:
     standard: Drupal,DrupalPractice
   phpstan:
     level: max
+    paths:
+      - web/modules/custom
 
 drupal:
   docroot: web
