--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -5,5 +5,6 @@
    <description>PHPCS configuration file for docker-example-drupal.</description>
    <file>src</file>
    <arg value="np"/>
-   <rule ref="Drupal,DrupalPractice"/>
-</ruleset>
+      <rule ref="Drupal"/>
+      <rule ref="DrupalPractice"/>
+   </ruleset>
