build-configs: enable pre-push Git hook

--- a/build.yaml
+++ b/build.yaml
@@ -61,4 +61,5 @@ dockerfile:
 
 experimental:
   createGitHubActionsConfiguration: true
+  runGitHooksBeforePush: true
   useNewDatabaseCredentials: true
