build-configs: update build.yaml

--- a/build.yaml
+++ b/build.yaml
@@ -27,37 +27,16 @@ drupal:
 
 docker-compose:
   services:
-    database: ~
-    php:
-      build:
-        target: build
+    - database
+    - php
+    - web
 
 dockerfile:
   stages:
     build:
-      extends: base
-      packages:
-        - git
-        - libpng-dev
-        - libzip-dev
-        - mariadb-client
-        - unzip
-      extensions:
-        install:
-          - gd
-          - pdo_mysql
-          - zip
       commands:
         - composer validate
         - composer install
-
-    test:
-      extends: base
-      commands:
-        - parallel-lint src --no-progress
-        - phpcs -vv
-        - phpstan
-        - phpunit --testdox
 
 experimental:
   createGitHubActionsConfiguration: true
