--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "drupal/core-project-message": "^10",
         "drupal/core-recommended": "^10",
         "drupal/examples": "^4.0",
-        "drush/drush": "^11.0"
+        "drush/drush": "^12.4"
     },
     "conflict": {
         "drupal/drupal": "*"
@@ -34,7 +34,8 @@
             "drupal/core-composer-scaffold": true,
             "drupal/core-project-message": true,
             "dealerdirect/phpcodesniffer-composer-installer": true,
-            "phpstan/extension-installer": true
+            "phpstan/extension-installer": true,
+            "php-http/discovery": true
         }
     },
     "extra": {
