Add initial xdebug support
Enable using `XDEBUG_MODE=debug docker compose up`.

--- a/docker-compose.override.yaml.example
+++ b/docker-compose.override.yaml.example
@@ -1,8 +1,6 @@
 services:
-  php-fpm:
+  php:
+    environment:
+      XDEBUG_MODE: ${XDEBUG_MODE:-off}
     extra_hosts:
-      - "host.docker.internal:host-gateway"
-
-  web:
-    ports:
-      - "80:80"
+      host.docker.internal: host-gateway
