--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -17,7 +17,7 @@
     <env name="MINK_DRIVER_ARGS_WEBDRIVER" value=''/>
     <env name="MINK_DRIVER_CLASS" value=''/>
     <env name="SIMPLETEST_BASE_URL" value="http://web"/>
-    <env name="SIMPLETEST_DB" value="sqlite://localhost//dev/shm/test.sqlite"/>
+    <env name="SIMPLETEST_DB" value="mysql://app:app@database/app#test"/>
 
     <ini name="error_reporting" value="32767"/>
     <ini name="memory_limit" value="-1"/>
